# dnss-libuv

./: CMakeLists.txt  README.md  main.c  server.c  server.h  test.c
CmakeModules/: FindUv.cmake
dns/: additional.c  additional.h  authority.c  authority.h  buffer.c  buffer.h  cache.c  cache.h  common.c  common.h  dns.c  dns.h  hashmap.c  hashmap.h  hashtable.c  hashtable.h  header.c  header.h  message.c  message.h  question.c  question.h  record.c  record.h
